# qwen-api

./: .env.example  .gitignore  HOW_IT_WORKS.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: OPERATIONS.md
kaggle/: kernel-metadata.json  qwen-api.ipynb
qwen_api/: __init__.py  __main__.py  kaggle_runner.py
scripts/: kaggle_status.sh  package_runtime_bundle.sh  push_kaggle_notebook.sh
tests/: test_runner_helpers.py
